--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "main": "src/index.js",
   "scripts": {
     "test": "./node_modules/.bin/eslint */*.js && jest",
-    "coverage": "jest --coverage"
+    "coverage": "jest --coverage && cat ./coverage/lcov.info | coveralls"
   },
   "repository": {
     "type": "git",
@@ -23,6 +23,7 @@
   },
   "homepage": "https://github.com/DiscoNova/detect-mobile-osk#readme",
   "devDependencies": {
+    "coveralls": "^3.0.5",
     "eslint": "^6.0.1",
     "jest": "^24.8.0"
   }
